--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
             </div>
         </div>
+        <button>MORE EVENTS</button>
     </div>
     <div class="section3">
         <div class="cloud"><img src="./image/cloud.png" alt=""></div>
