--- a/index.html
+++ b/index.html
@@ -282,6 +282,123 @@
             <img src="./image/right.png" alt="">
         </div>
     </div>
+    <div class="section6">
+        <div class="cloud"><img src="./image/cloud.png" alt=""></div>
+        <div class="s6__text">
+            <h2>Multiplayer Social-Network game</h2>
+            <p>All Day is a social game in which players can have a complete gaming experience with many mini games,
+                social platform features, and blockchain technology. </p>
+        </div>
+        <div class="s6__line">
+            <div class="line"></div>
+            <div class="s6__flex">
+                <div class="s6--item1">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1 s6--item2">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1 s6--item2">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1 s6--item2">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="s6--item1">
+                    <div class="s6--circle"></div>
+                    <div class="s6--element">
+                        <div class="elm--box">
+                            <h6>Q4</h6>
+                            <p>2021</p>
+                        </div>
+                        <div class="elm--text">
+                            <p><img src="./image/Vector.png" alt="">World Concept</p>
+                            <p><img src="./image/Vector (1).png" alt="">Internal MVP</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <img src="./image/person5.png" class="s6__img" alt="">
+
+    </div>
+
+
+
+
     <div class="section7">
         <div class="cloud"><img src="./image/cloud.png" alt=""></div>
 
